<package format="3">
    <name>depthai</name>
    <version>3.2.1</version>
    <description>DepthAI core is a C++ library which comes with firmware and an API to interact with
        OAK Platform</description>

    <maintainer email="adam.serafin@luxonis.com">Adam Serafin</maintainer>
    <author email="martin@luxonis.com">Martin Peterlin</author>

    <license>MIT</license>

    <url type="website">https://www.luxonis.com/</url>

    <build_depend>ros_environment</build_depend>

    <depend>libusb-1.0-dev</depend>
    <depend>libudev-dev</depend>
    <depend>libopencv-dev</depend>
    <depend>gfortran</depend>
    <depend>nlohmann-json-dev</depend>
    <depend>curl</depend>
    <depend>spdlog</depend>
    <depend>fmt</depend>
    <depend>zip</depend>
    <depend>tar</depend>
    <depend>unzip</depend>
    <depend>rtabmap</depend>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
